testsuite/tests/deriving/should_fail/T9071a.hs
module T9071a where

newtype Mu f = Mu (f (Mu f))

